syntax = "proto3";

package proto;

option go_package = "/proto";

service CurrencyConvertService {
    rpc Convert (CurrencyConvertRequest) returns (CurrencyConvertResponse);
}
  
message CurrencyConvertRequest {
    float amount = 1;
    string fromCurrency = 2;
    string toCurrency = 3;
}

message CurrencyConvertResponse {
    float amount = 1;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/currency_convert.proto